--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
     "url": "https://github.com/chernodub/chernodub.github.io/issues"
   },
   "homepage": "https://github.com/chernodub/chernodub.github.io#readme",
-  "devDependencies": {
-    "live-server": "^1.2.1"
-  }
+  "devDependencies": {}
 }
