--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "chernodub.github.io",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Profile page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \"npm:watch-dev\" \"npm:serve-dev\"",
+    "serve-dev": "live-server --ignorePattern=\".*\\.ts\"",
+    "watch-dev": "webpack -w --debug --devtool inline-source-map",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -16,5 +19,12 @@
     "url": "https://github.com/chernodub/chernodub.github.io/issues"
   },
   "homepage": "https://github.com/chernodub/chernodub.github.io#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "live-server": "^1.2.1",
+    "typescript": "^4.0.2",
+    "ts-loader": "^8.0.3",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
+  }
 }
