--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"npm:watch-dev\" \"npm:serve-dev\"",
-    "serve-dev": "live-server --ignorePattern=\".*\\.ts\"",
+    "serve-dev": "live-server --ignorePattern=\".*\\.ts\" ./dist",
     "watch-dev": "webpack -w --debug --devtool inline-source-map",
     "build": "webpack -p"
   },
@@ -21,10 +21,14 @@
   },
   "homepage": "https://github.com/chernodub/chernodub.github.io#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.3.0",
+    "css-loader": "^4.3.0",
+    "html-webpack-plugin": "^4.4.1",
     "live-server": "^1.2.1",
-    "typescript": "^4.0.2",
+    "style-loader": "^1.2.1",
     "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
