--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "concurrently \"npm:watch-dev\" \"npm:serve-dev\"",
     "serve-dev": "live-server --ignorePattern=\".*\\.ts\" ./dist",
-    "watch-dev": "webpack -w --debug --devtool inline-source-map",
+    "watch-dev": "webpack --mode development -w --debug --devtool inline-source-map",
     "build": "webpack -p"
   },
   "repository": {
@@ -24,6 +24,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.3.0",
     "css-loader": "^4.3.0",
+    "eslint": "^7.10.0",
     "html-webpack-plugin": "^4.4.1",
     "live-server": "^1.2.1",
     "style-loader": "^1.2.1",
