--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "serve-dev": "live-server --ignorePattern=\".*\\.ts\" ./dist",
     "watch-dev": "npm run build-dev -- -w",
     "build": "webpack -p",
-    "build-dev": "webpack --mode development --debug --devtool inline-source-map"
+    "build-dev": "webpack --mode development --debug --devtool inline-source-map",
+    "lint": "eslint src/**/*.ts --fix"
   },
   "repository": {
     "type": "git",
@@ -23,16 +24,22 @@
   },
   "homepage": "https://github.com/chernodub/chernodub.github.io#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.3.0",
-    "css-loader": "^4.3.0",
-    "eslint": "^7.10.0",
-    "html-webpack-plugin": "^4.4.1",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.16.0",
+    "eslint-config-chernodub": "^2.2.4",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^30.7.9",
+    "html-webpack-plugin": "^4.5.0",
     "live-server": "^1.2.1",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
-  }
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.12",
+    "typescript": "^4.1.3",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0"
+  },
+  "dependencies": {}
 }
