--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   },
   "homepage": "https://github.com/chernodub/chernodub.github.io#readme",
   "devDependencies": {
+    "@chernodub/eslint-config": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.3.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.16.0",
-    "eslint-config-chernodub": "^2.2.4",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^30.7.9",
     "html-webpack-plugin": "^4.5.0",
