--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/chernodub/chernodub.github.io#readme",
   "devDependencies": {
-    "@chernodub/eslint-config": "^1.0.1",
+    "@chernodub/eslint-config": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -41,5 +41,7 @@
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "rxjs": "^6.6.3"
+  }
 }
