--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/portfolio",
+  "name": "chernodub.github.io",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -11,6 +11,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.2"
+    "astro": "^2.4.5"
   }
 }
