--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.4.5"
+    "@astrojs/tailwind": "^3.1.2",
+    "astro": "^2.4.5",
+    "tailwindcss": "^3.3.2"
   }
 }
